--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -63,6 +63,7 @@ nav a {
     width: 100%;
   }
   .icon {
+    display: none;
     position: fixed;
     right: 10px;
     height: 30px;
