--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ html {
   --font-size-paragraph-s: 18px;
 
   --font-size-l: 20px;
+  --font-size-m: 16px;
   --font-size-s: 14px;
   --font-size-xs: 10px;
 
